--- a/app/views/api/chairs/index.html.erb
+++ b/app/views/api/chairs/index.html.erb
@@ -8,7 +8,7 @@ Welcome! See all my chairs for sale: <br><br>
 <div>
 <% @chairs.map do |chair| %>
   <br><br>
-  Chair: <%= chair.id %><br>
+  Chair: <a href = "/api/chairs/<%= chair.id %>" ><%= chair.id %></a><br>
   Color: <%= chair.color %><br>
   Weight: <%= chair.weight %>
 <% end %>
